Mon Dec  1 17:49:43 2003  Tao Lu  <lu@dre.vanderbilt.edu>

        * examples/Hello/descriptors/remote.cad:
        * examples/Hello/descriptors/remote.dat:
          Added these 2 files for the example to run on remote setting.

Mon Dec  1 02:35:18 2003  Tao Lu  <lu@dre.vanderbilt.edu>

        * examples/Hello/Sender/Sender.mpc:
          Added the empty IDL_Files part in the starter project to get rid
          of the linking error(MPC generates makefile which links in
          unnecessary linkage reqirements). Also deleted all the Makefiles
          in the example. The user should run mwc.pl to regenerate the
          Makefile before building the project.

Sun Nov 30 20:51:06 2003  Tao Lu  <lu@dre.vanderbilt.edu>

        * examples/Hello/Sender/Makefile.Hello_Starter:
          Added this makefile which will make the starter program.

Sun Nov 30 11:47:29 2003  Tao Lu  <lu@dre.vanderbilt.edu>

        * examples/Hello:
          Moved the starter.cpp into the Sender project to so the
          dependency will be set correctly.

Sat Nov 29 15:57:54 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

	* examples/handcrafted/BasicSP/*.mpc:
	* examples/handcrafted/Display/*.mpc:
	  Removed all MPC files for this directory and sub directories
          because these examples are going to be removed and at this moment
          these MPC files cause problems with the MPC generation because
          of duplicate names.

Fri Nov 28 14:09:56 2003  Tao Lu  <lu@dre.vanderbilt.edu>

        * examples/Hello/README:
        * examples/Hello/Makefile:
        * examples/Hello/Hello_Base/Hello_Base_stub_export.h:
        * examples/Hello/Hello_Base/Makefile.Hello_Base_stub:
        * examples/Hello/Hello_Base/Hello_Base.idl:
        * examples/Hello/Hello_Base/Hello_Base_svnt_export.h:
        * examples/Hello/Hello_Base/Makefile.Hello_Base_svnt:
        * examples/Hello/Hello_Base/Hello_Base.mpc:
        * examples/Hello/Hello_Base/Makefile: