@@ -1,3 +1,12 @@
+Tue Dec  2 18:40:59 2003  Tao Lu  <lu@dre.vanderbilt.edu>
+
+        * examples/Hello/Receiver/Receiver_exec.cpp:
+        * examples/Hello/descriptors/run_test_default.pl:
+        * examples/Hello/descriptors/run_test_remote.pl:
+          Added two auto run perl scripts and fixed the bug in the
+          Receiver_exec which caused the OBV run time error when
+          the Sender and the Receiver are not collocated.
+
 Mon Dec  1 17:49:43 2003  Tao Lu  <lu@dre.vanderbilt.edu>
 
         * examples/Hello/descriptors/remote.cad:
